# core-agent

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  core-agent-config.example.yaml
agent-cli/: Cargo.toml
agent-cli/src/: app.rs  client.rs  command.rs  config.rs  domain.rs  embedded.rs  error.rs  http.rs  lib.rs  main.rs  professional.rs  renderer.rs  tui.rs
agent-cli/tests/: agent_binary_e2e.rs  cli_runtime_e2e.rs  embedded_runtime_e2e.rs  live_global_config_e2e.rs  professional_cli_e2e.rs
core-agent-collaboration/: Cargo.toml
core-agent-collaboration/src/: lib.rs
core-agent-collaboration/tests/: collaboration_e2e.rs
core-agent-config/: Cargo.toml
core-agent-config/src/: domain.rs  error.rs  infrastructure.rs  lib.rs  manager.rs  providers.rs  writer.rs
core-agent-config/tests/: config_runtime_e2e.rs
core-agent-context/: Cargo.toml
core-agent-context/src/: lib.rs
core-agent-context/src/api/: mod.rs
core-agent-context/src/application/: composer.rs  mod.rs  pipeline.rs  reducer.rs  service.rs
core-agent-context/src/domain/: context.rs  context_reference.rs  conversation_context.rs  environment_context.rs  memory_context.rs  mod.rs  plugin_context.rs  slot.rs  system_context.rs  tool_context.rs  user_context.rs  workspace_context.rs
core-agent-context/src/dto/: mod.rs
core-agent-context/src/error/: mod.rs
core-agent-context/src/infrastructure/: cache.rs  composer.rs  mod.rs  observer.rs  provider.rs  reducer.rs  serializer.rs  snapshot_store.rs
core-agent-context/src/persistence/: mod.rs  reference_store.rs  schema.rs  store.rs
core-agent-context/tests/: context_runtime_e2e.rs
core-agent-developer/: Cargo.toml
core-agent-developer/src/: domain.rs  error.rs  infrastructure.rs  lib.rs  manager.rs
core-agent-document/: Cargo.toml
core-agent-document/src/: defaults.rs  domain.rs  error.rs  infrastructure.rs  lib.rs  manager.rs
core-agent-document/src/persistence/: mod.rs  schema.rs  store.rs
core-agent-document/tests/: document_e2e.rs
core-agent-event/: Cargo.toml
core-agent-event/src/: defaults.rs  domain.rs  error.rs  infrastructure.rs  lib.rs  manager.rs
core-agent-event/src/persistence/: mod.rs  schema.rs  store.rs
core-agent-event/tests/: event_runtime_e2e.rs
core-agent-execution/: Cargo.toml
core-agent-execution/src/: defaults.rs  domain.rs  error.rs  infrastructure.rs  lib.rs  manager.rs
core-agent-execution/src/persistence/: mod.rs  schema.rs  store.rs
core-agent-execution/tests/: execution_runtime_e2e.rs
core-agent-extension/: Cargo.toml
core-agent-extension/src/: defaults.rs  domain.rs  error.rs  infrastructure.rs  lib.rs  manager.rs
core-agent-extension/src/persistence/: mod.rs  schema.rs  store.rs
core-agent-extension/tests/: extension_runtime_e2e.rs
core-agent-governance/: Cargo.toml
core-agent-governance/src/: lib.rs
core-agent-governance/tests/: enterprise_governance_e2e.rs
core-agent-kernel/: Cargo.toml
core-agent-kernel/src/: config.rs  domain.rs  error.rs  infrastructure.rs  kernel.rs  lib.rs  service.rs
core-agent-kernel/tests/: kernel_runtime_e2e.rs
core-agent-knowledge/: Cargo.toml
core-agent-knowledge/src/: defaults.rs  domain.rs  error.rs  infrastructure.rs  lib.rs  manager.rs
core-agent-knowledge/src/persistence/: mod.rs  schema.rs  store.rs
core-agent-knowledge/tests/: knowledge_e2e.rs
core-agent-mcp/: Cargo.toml
core-agent-mcp/src/: client.rs  config.rs  constants.rs  error.rs  lib.rs  provider.rs
core-agent-message/: Cargo.toml
core-agent-message/src/: defaults.rs  domain.rs  error.rs  infrastructure.rs  lib.rs  manager.rs
core-agent-message/src/persistence/: mod.rs  schema.rs  store.rs
core-agent-message/tests/: message_e2e.rs
core-agent-model/: Cargo.toml
core-agent-model/src/: error.rs  lib.rs
core-agent-model/src/application/: engine.rs  manager.rs  mod.rs  router.rs  stream.rs
core-agent-model/src/domain/: capability.rs  metadata.rs  mod.rs  profile.rs  request.rs  request_metric.rs  response.rs  usage.rs
core-agent-model/src/infrastructure/: catalog.rs  defaults.rs  mod.rs  observer.rs  registry.rs  traits.rs
core-agent-model/src/persistence/: mod.rs  schema.rs  store.rs
core-agent-model/tests/: model_runtime_e2e.rs
core-agent-network/: Cargo.toml
core-agent-network/src/: defaults.rs  domain.rs  error.rs  infrastructure.rs  lib.rs  manager.rs
core-agent-network/tests/: network_e2e.rs
core-agent-openapi/: Cargo.toml
core-agent-openapi/src/: domain.rs  error.rs  infrastructure.rs  lib.rs  manager.rs
core-agent-orchestrator/: Cargo.toml
core-agent-orchestrator/src/: defaults.rs  domain.rs  error.rs  infrastructure.rs  lib.rs  manager.rs
core-agent-orchestrator/tests/: orchestrator_e2e.rs
core-agent-plan/: Cargo.toml
core-agent-plan/src/: defaults.rs  domain.rs  error.rs  infrastructure.rs  lib.rs  manager.rs
core-agent-plan/tests/: planning_runtime_e2e.rs
core-agent-plugin/: Cargo.toml
core-agent-plugin/src/: domain.rs  error.rs  lib.rs  manager.rs  package.rs
core-agent-protocol/: Cargo.toml
core-agent-protocol/src/: lib.rs
core-agent-protocol/tests/: protocol_ctk.rs
core-agent-question/: Cargo.toml
core-agent-question/src/: domain.rs  lib.rs  runtime.rs
core-agent-rag/: Cargo.toml
core-agent-rag/src/: defaults.rs  domain.rs  error.rs  infrastructure.rs  lib.rs  manager.rs
core-agent-rag/tests/: rag_e2e.rs
core-agent-scanner/: Cargo.toml
core-agent-scanner/src/: domain.rs  error.rs  lib.rs  scanner.rs
core-agent-sdk/: Cargo.toml
core-agent-sdk/src/: domain.rs  error.rs  infrastructure.rs  lib.rs
core-agent-semantic/: Cargo.toml
core-agent-semantic/src/: defaults.rs  domain.rs  error.rs  infrastructure.rs  lib.rs  manager.rs
core-agent-semantic/tests/: semantic_e2e.rs
core-agent-skill/: Cargo.toml
core-agent-skill/src/: domain.rs  error.rs  executor.rs  lib.rs
core-agent-slash/: Cargo.toml
core-agent-slash/src/: domain.rs  error.rs  lib.rs  registry.rs
core-agent-todo/: Cargo.toml
core-agent-todo/src/: domain.rs  lib.rs  runtime.rs
src/: checkpoint.rs  (+16 more)
(+620 files in other folders)
