[workspace]
resolver = "2"
members = [
    "core-agent-session",
    "core-agent-context",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/core-agent/core-agent"

[package]
name = "core-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Enterprise Agent Runtime — Agent Operating System"

[dependencies]
core-agent-session = { path = "core-agent-session" }
core-agent-context = { path = "core-agent-context" }
