[workspace]
resolver = "2"
members = [
    "core-agent-config",
    "core-agent-session",
    "core-agent-context",
    "core-agent-model",
    "core-agent-tool",
    "core-agent-workspace",
    "core-agent-plan",
    "core-agent-execution",
    "core-agent-agent",
    "core-agent-memory",
    "core-agent-event",
    "core-agent-workflow",
    "core-agent-multi",
    "core-agent-extension",
    "core-agent-platform",
    "core-agent-kernel",
    "core-agent-app",
    "agent-cli",
    "agent-desktop/src-tauri",
    "core-agent-visual",
    "core-agent-collaboration",
    "core-agent-governance",
    "core-agent-ecosystem",
    "core-agent-protocol",
    "core-agent-question",
    "core-agent-todo",
    "core-agent-reflection",
    "core-agent-subagent",
    "core-agent-message",
    "core-agent-orchestrator",
    "core-agent-slash",
    "core-agent-skill",
    "core-agent-plugin",
	    "core-agent-mcp",
	    "core-agent-audit",
	    "core-agent-approval",
	    "core-agent-cost",
	    "core-agent-evaluation",
	    "core-agent-learning",
	    "core-agent-marketplace",
	    "core-agent-network",
	    "core-agent-autonomous",
		    "core-agent-document",
		    "core-agent-vector",
		    "core-agent-rag",
		    "core-agent-knowledge",
		    "core-agent-semantic",
]

[workspace.package]
version = "0.43.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/core-agent/core-agent"

[package]
name = "core-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Enterprise Agent Runtime — Agent Operating System"

[dependencies]
core-agent-config = { path = "core-agent-config" }
core-agent-session = { path = "core-agent-session" }
core-agent-context = { path = "core-agent-context" }
core-agent-model = { path = "core-agent-model" }
core-agent-tool = { path = "core-agent-tool" }
core-agent-workspace = { path = "core-agent-workspace" }
core-agent-plan = { path = "core-agent-plan" }
core-agent-execution = { path = "core-agent-execution" }
core-agent-agent = { path = "core-agent-agent" }
core-agent-memory = { path = "core-agent-memory" }
core-agent-event = { path = "core-agent-event" }
core-agent-workflow = { path = "core-agent-workflow" }
core-agent-multi = { path = "core-agent-multi" }
core-agent-extension = { path = "core-agent-extension" }
core-agent-platform = { path = "core-agent-platform" }
core-agent-kernel = { path = "core-agent-kernel" }
core-agent-app = { path = "core-agent-app" }
core-agent-visual = { path = "core-agent-visual" }
core-agent-collaboration = { path = "core-agent-collaboration" }
core-agent-governance = { path = "core-agent-governance" }
core-agent-ecosystem = { path = "core-agent-ecosystem" }
core-agent-protocol = { path = "core-agent-protocol" }
core-agent-question = { path = "core-agent-question" }
core-agent-todo = { path = "core-agent-todo" }
core-agent-reflection = { path = "core-agent-reflection" }
core-agent-subagent = { path = "core-agent-subagent" }
core-agent-message = { path = "core-agent-message" }
core-agent-orchestrator = { path = "core-agent-orchestrator" }
core-agent-audit = { path = "core-agent-audit" }
core-agent-approval = { path = "core-agent-approval" }
core-agent-cost = { path = "core-agent-cost" }
core-agent-mcp = { path = "core-agent-mcp" }
core-agent-plugin = { path = "core-agent-plugin" }
core-agent-skill = { path = "core-agent-skill" }
core-agent-slash = { path = "core-agent-slash" }
core-agent-evaluation = { path = "core-agent-evaluation" }
core-agent-learning = { path = "core-agent-learning" }
core-agent-marketplace = { path = "core-agent-marketplace" }
core-agent-network = { path = "core-agent-network" }
core-agent-autonomous = { path = "core-agent-autonomous" }
async-trait = "0.1"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "net", "process", "sync", "time"] }
tokio-util = "0.7"
futures-util = "0.3"
async-stream = "0.3"
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
