[package]
name = "agent-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Official terminal client for core-agent"

[[bin]]
name = "agent"
path = "src/main.rs"

[dependencies]
core-agent = { path = ".." }
async-stream = "0.3"
async-trait = "0.1"
arboard = { version = "3", default-features = false }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
futures-core = "0.3"
futures-util = "0.3"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
unicode-width = "0.2"
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
