[package]
name = "core-agent-collaboration"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Team project, review, approval and activity collaboration layer"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
