[package]
name = "core-agent-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Extensible configuration runtime for core-agent"

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
