[package]
name = "core-agent-context"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Context Runtime — Agent context lifecycle manager"

[dependencies]
# Core
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "macros", "rt"] }

# Persistence
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# Hashing
sha2 = "0.10"

# Session Runtime (read-only dependency)
core-agent-session = { path = "../core-agent-session" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
