[package]
name = "core-agent-developer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Developer Platform — agent creation, testing, and publishing tools"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
core-agent-platform = { path = "../core-agent-platform" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }