[package]
name = "core-agent-document"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Document Intelligence - parsing pipeline for enterprise documents"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }

# Document parsers
pulldown-cmark = "0.12"
pdf-extract = "0.7"
regex = "1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }