[package]
name = "core-agent-execution"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Execution Runtime - durable Plan to Command orchestration"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
core-agent-plan = { path = "../core-agent-plan" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["macros", "sync", "time"] }
tokio-util = "0.7"
uuid = { version = "1", features = ["v4", "v5", "serde"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }
