[package]
name = "core-agent-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Runtime lifecycle and dependency coordination Kernel"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
