[package]
name = "core-agent-knowledge"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Unified Knowledge Management - enterprise knowledge brain"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
core-agent-document = { path = "../core-agent-document" }
core-agent-vector = { path = "../core-agent-vector" }
core-agent-rag = { path = "../core-agent-rag" }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }
