[package]
name = "core-agent-message"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Message Runtime - inter-agent communication bus and mailbox"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }