[package]
name = "core-agent-model"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Model Runtime — provider-neutral AI model inference runtime"

[dependencies]
async-stream = "0.3"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
eventsource-stream = "0.2"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Persistence
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
