[package]
name = "core-agent-orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Orchestrator Runtime - multi-agent orchestration, strategy execution, and result aggregation"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
core-agent-subagent = { path = "../core-agent-subagent" }
core-agent-message = { path = "../core-agent-message" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }