[package]
name = "core-agent-plan"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Planning Runtime — provider-neutral Goal to Plan transformation"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
url = "2"
uuid = { version = "1", features = ["v4", "v5", "serde"] }

# Persistence
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }
