[package]
name = "core-agent-plugin"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Plugin Runtime — Agent platform extension system (lifecycle, manifest, sandbox)"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
core-agent-extension = { path = "../core-agent-extension" }
core-agent-tool = { path = "../core-agent-tool" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }