[package]
name = "core-agent-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "AgentOS internal protocol contracts, discovery registry and compatibility kit"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"

[dev-dependencies]
serde_yaml = "0.9"
