[package]
name = "core-agent-question"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Question Runtime — Human-in-the-loop collaboration for Agent"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "sync", "rt"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }