[package]
name = "core-agent-rag"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Retrieval Augmented Generation Pipeline"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
core-agent-vector = { path = "../core-agent-vector" }
core-agent-document = { path = "../core-agent-document" }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }
