[package]
name = "core-agent-scanner"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Extension Root Scanner — unified discovery of agents, tools, skills, and MCP servers"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"