[package]
name = "core-agent-semantic"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Semantic Understanding - knowledge graph and entity extraction"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
core-agent-document = { path = "../core-agent-document" }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }
