[package]
name = "core-agent-skill"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Skill Runtime — load, discover, and execute reusable agent skill workflows"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
core-agent-tool = { path = "../core-agent-tool" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["rt"] }