[package]
name = "core-agent-slash"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Slash Command Runtime — user-facing quick-action command entry system"

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }